# learnopengl-implementation

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
include/learnopengl-implementation/: shader.h
src/: glad.c  main.cpp  shader.cpp  shader.fs  shader.vs
